Fix how cells are implemented and add hover functionallity

--- a/main.css
+++ b/main.css
@@ -1,12 +1,12 @@
 .column {
   border: solid red 1px;
+  min-width: 6vw;
 }
 
 .row {
   border: solid red 1px;
   min-height: 6.25vh;
   display: flex;
-  justify-content: space-between;
 }
 
 .container {
